# sussy

./: CMakeLists.txt  README.md  main.cpp  test.sus
include/: AST.hpp  Arithmetics.hpp  Exec.hpp  Function.hpp  Lexer.hpp  Utils.hpp  Variable.hpp
src/: AST.cpp  Exec.cpp  Function.cpp  Lexer.cpp  Variable.cpp
